--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.robocode.jar=C:\\robocode\\libs\\robocode.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.robocode.jar}
+    ${file.reference.robocode.jar}:\
+    ${reference.RobotEvolver.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +64,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.RobotEvolver=../RobotEvolver
+reference.RobotEvolver.jar=${project.RobotEvolver}/dist/RobotEvolver.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
